# gefs_temperature_spread_error

./: README.md  config.py  data_access.py  verification.py
gefs_spread_error/: __init__.py  config.py  data_access.py  plotting.py  pyproject.toml  verification.py
notebooks/: 01_single_gefs_temperature_spread_error.ipynb  02_multidate_spread_skill_ratio.ipynb  gefs_temperature_spread_error.ipynb
src/: plotting.py  setup.py
